--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,12 @@ header {
 .whatsapp-button:hover {
     background-color: #2980b9;
 }
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
