--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ footer {
     text-align: center;
     padding: 1rem;
     position: absolute;
-    width: 100%;
+    width: 100%; /* Set the width to 100% to match the screen width */
     bottom: 0;
+    left: 0; /* Align the left edge with the left edge of the screen */
 }
